deploy/deploy-w-keyvault-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"mayo.dcis.https-sidecar":"inject","mayo.dcis.https-sidecar-port":"8080"},"labels":{"run":"flower-shop"},"name":"flower-shop","namespace":"drf225ns1"},"spec":{"replicas":1,"selector":{"matchLabels":{"run":"flower-shop"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":1},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"run":"flower-shop"}},"spec":{"containers":[{"image":"dou [...]
    mayo.dcis.https-sidecar-port: "8080"
    mayo.dcis.https-sidecar: inject
  creationTimestamp: null
  generation: 1
  labels:
    run: flower-shop
  name: flower-shop
  selfLink: /apis/apps/v1/namespaces/drf225ns1/deployments/flower-shop
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: flower-shop
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: flower-shop
        aadpodidbinding: allow-#{kube-namespace}#
    spec:
      containers:
      - image: dougfish1/flower-shop:latest
        imagePullPolicy: Always
        name: flower-shop
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/secrets
          name: akv-secrets
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: akv-secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kv-#{kube-namespace}#
status: {}
