deploy/internal-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    run: flower-shop-int
  name: flower-shop-int
spec:
  ports:
  - name: flower-shop-int
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: flower-shop
  type: LoadBalancer
