deploy/kube.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flower-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flower-shop
    spec:
      containers:
      - name: flower-shop
        image: drfaks.azurecr.io/flower-shop:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: drfaks
---
apiVersion: v1
kind: Service
metadata:
  name: flower-shop
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: flower-shop
