deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: flower-shop
  name: flower-shop
spec:
  ports:
  - name: flower-shop
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: flower-shop
