deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flower-shop
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: flower-shop.kubeprodce-aks.mayo.edu
    http:
      paths:
      - backend:
          serviceName: flower-shop-int
          servicePort: 443
  tls:
  - hosts:
    - flower-shop.kubeprodce-aks.mayo.edu
